@@ -1,5 +1,6 @@
 ﻿using AllOverIt.Pagination;
 using Microsoft.EntityFrameworkCore;
+using System.Linq;
 using System.Threading;
 using System.Threading.Tasks;
 
@@ -36,6 +37,56 @@ namespace AllOverIt.EntityFrameworkCore.Pagination.Extensions
             {
                 return queryable.AnyAsync(predicate, token);
             }, cancellationToken);
+        }
+
+        /// <summary>Executes a paginated query and returns the results along with information pertaining to the previous and next pages of data.</summary>
+        /// <typeparam name="TResult">The result type.</typeparam>
+        /// <param name="queryPaginator">The paginator containing the configured query to execute.</param>
+        /// <param name="continuationToken">The continuation token that describes how to obtain the next (or previous) page of data.</param>
+        /// <param name="cancellationToken">A cancellation token.</param>
+        /// <returns>A page of results along with information about the previous and next page of data available.</returns>
+        public static async Task<PageResult<TResult>> GetPageResultsAsync<TResult>(this IQueryPaginator<TResult> queryPaginator, string continuationToken,
+            CancellationToken cancellationToken) where TResult : class
+        {
+            var totalCount = await queryPaginator.BaseQuery.CountAsync(cancellationToken).ConfigureAwait(false);
+            var pageQuery = queryPaginator.GetPageQuery(continuationToken);
+            var pageResults = await pageQuery.ToListAsync(cancellationToken).ConfigureAwait(false);
+
+            var hasResults = pageResults.Any();
+            string previousToken = default;
+            string nextToken = default;
+
+            if (hasResults)
+            {
+                var (first, last) = (pageResults[0], pageResults[^1]);
+
+                var hasPreviousPage = await queryPaginator
+                    .HasPreviousPageAsync(first, cancellationToken)
+                    .ConfigureAwait(false);
+
+                if (hasPreviousPage)
+                {
+                    previousToken = queryPaginator.TokenEncoder.EncodePreviousPage(pageResults);
+                }
+
+                var hasNextPage = await queryPaginator
+                    .HasNextPageAsync(last, cancellationToken)
+                    .ConfigureAwait(false);
+
+                if (hasNextPage)
+                {
+                    nextToken = queryPaginator.TokenEncoder.EncodeNextPage(pageResults);
+                }
+            }
+
+            return new PageResult<TResult>
+            {
+                Results = pageResults,
+                TotalCount = totalCount,
+                CurrentToken = continuationToken,
+                PreviousToken = previousToken,
+                NextToken = nextToken
+            };
         }
     }
 }
